--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build:ssr": "vite build && vite build --ssr",
         "preview": "vite preview",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-        "type-check": "tsc --noEmit"
+        "type-check": "tsc --noEmit",
+        "update-app-name": "node scripts/update-app-name.js"
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
