--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "globals": "^15.14.0",
         "laravel-vite-plugin": "^2.0",
         "lucide-react": "^0.475.0",
+        "qr-scanner": "^1.4.2",
         "react": "^18.3.1",
         "react-day-picker": "^9.9.0",
         "react-dom": "^18.3.1",
